test/simple/correct/FloatUnaryMinus3.hs
module FloatUnaryMinus3 where

main :: Int
main = f (-.2.0)

f :: Float -> Int
f (-.2.0) = 3
f _ = 4

        