test/simple/typeerrors/Examples/Body.hs
module Body where

f :: Int
f = (+)
